# nu_plugin_clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.nu  nupm.nuon  package.nuon
.github/workflows/: dependency-update.yaml  publish.yaml  publish_crate.yaml
src/: main.rs
src/clipboard/: arboard_provider.rs  clipboard.rs  copy.rs  detect_display.rs  error_mapper.rs  linux.rs  mac_os.rs  mod.rs  paste.rs  windows.rs
src/command/: copy.rs  mod.rs  paste.rs
src/utils/: json.rs  log.rs  mod.rs
