[package]
name = "nu_plugin_clipboard"
license = "MIT"
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
keywords = ["nushell", "clipboard", "plugin"]
homepage = "https://github.com/FMotalleb/nu_plugin_clipboard"
repository = "https://github.com/FMotalleb/nu_plugin_clipboard"
description = "A nushell plugin to copy text into clipboard or get text from it."
version = "0.92.1"
edition = "2021"
readme = "README.md"

[dependencies]
nu-plugin = "0.93.0"
nu-protocol = { version = "0.93.0", features = ["plugin"] }
arboard = { version = "3.3.2", default_features = false }
nu-json = "0.93.0"

[features]
default = []
use-wayland = ["arboard/wayland-data-control"]
enforce-daemon = []
